--- a/src/App.css
+++ b/src/App.css
@@ -62,3 +62,12 @@
   height: 200px;
   object-fit: cover;
 }
+.imgProdu{
+  height: 300px;
+}
+.cardProdu{
+  height: 225px;
+}
+.precioProdu{
+  
+}
